--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -1,5 +1,6 @@
 // bootstrap
 @import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "./home-page/faq"
 
 // components'
 // @import "./components/header";
