--- a/public/assets/styles/_icon.scss
+++ b/public/assets/styles/_icon.scss
@@ -81,3 +81,18 @@ body{
   padding-top:30px;
 }
 
+@media screen and (max-width: 720px)  {
+  .icon-main {
+      grid-template-columns: 1fr; 
+  }
+}
+@media screen and (min-width: 720px) and (max-width: 1000px)  {
+  .icon-main {
+      grid-template-columns: repeat(2, 1fr); 
+  }
+}
+@media screen and (min-width: 1100px) and (max-width: 1400px)  {
+  .icon-main {
+      grid-template-columns: repeat(3, 1fr); 
+  }
+}
