Why Opt for Launchwis

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -1,6 +1,9 @@
 // bootstrap
+
+
 @import "../../../node_modules/bootstrap/scss/bootstrap";
-@import "./home-page/faq"
+@import "./home-page/faq";
+@import "./home-page/why-opt-launchwise";
 
 // components'
 // @import "./components/header";
