--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -1,9 +1,10 @@
 // bootstrap
 
-
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap");
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "./home-page/faq";
 @import "./home-page/why-opt-launchwise";
+@import "./home-page/virtual-office-address-for";
 
 // components'
 // @import "./components/header";
