--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -18,5 +18,5 @@
 
 // pages
 @import "./components/footer";
-@import "./components/HomePage/discovertheultimate"
-
+@import "./components/HomePage/discovertheultimate";
+@import "./components/oursolution";
