trusted by companies

--- a/public/assets/styles/home-page/_virtual-office-address-for.scss
+++ b/public/assets/styles/home-page/_virtual-office-address-for.scss
@@ -2,7 +2,12 @@
   * {
     font-family: Assistant;
   }
+  .outer-container{
+    background-color: #F5F5F5;
+    width: 100%;
+  }
   .list-virtual-addres {
+    
     display: flex;
     gap: 56px;
     align-items: center;
