why-opt-revision : style revision

--- a/public/assets/styles/_screens.scss
+++ b/public/assets/styles/_screens.scss
@@ -20,4 +20,9 @@
     @media (max-width: 550px) {
       @content;
     }
+}  
+@mixin min-devices {
+    @media (max-width: 370px) {
+      @content;
+    }
 }
