--- a/public/assets/styles/home-page/_virtual-office-address-for.scss
+++ b/public/assets/styles/home-page/_virtual-office-address-for.scss
@@ -3,8 +3,14 @@
     font-family: Assistant;
   }
   .outer-container{
+    padding: 68px 0;
     background-color: #F5F5F5;
     width: 100%;
+
+    @include mobile{
+      margin-top: -50px;
+      padding: 132px 0;
+    }
   }
   .list-virtual-addres {
     
