faq : style code revision

--- a/public/assets/styles/home-page/_why-opt-launchwise.scss
+++ b/public/assets/styles/home-page/_why-opt-launchwise.scss
@@ -8,9 +8,10 @@
     display: flex;
     margin-top: 167px;
     margin-bottom: 162px;
-
+    
     @include tablet {
       flex-direction: column;
+      margin-bottom: 130px;
     }
 
     // first component here
