--- a/public/assets/styles/home-page/_faq.scss
+++ b/public/assets/styles/home-page/_faq.scss
@@ -1,122 +1,113 @@
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap");
 
 .home_faq_component {
-  .all-faq {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr 1fr;
-    gap: 50px;
-  }
+  .container {
+    margin-bottom: 111px;
 
-  .question-card {
-    background-color: #f2f5fe;
-    padding: 20px 25px;
-    cursor: pointer;
-    border-radius: 17px;
-  }
-  .icon {
-    height: 10px;
-    width: 10px;
-  }
-  .rotate-icon {
-    transform: rotate(45deg);
-  }
-
-  .heading-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .heading {
-    font-size: 40px;
-    font-weight: 600;
-    color: #2962ff;
-    text-align: center;
-    font-family: Assistant,sans-serif;
-    line-height: 32px;
-  }
-  .heading-two {
-    text-align: center;
-    font-weight: 400;
-    font-size: 32px;
-    color: #303a42;
-    font-family: Assistant, sans-serif;
-    margin-top: 5px;
-  }
-  .ques {
-    font-size: 20px;
-    font-weight: 600px;
-    line-height: 20px;
-    color: #303a42;
-    font-family: Assistant, sans-serif;
-  }
-
-  .ans {
-    font-size: 18px;
-    font-weight: 400px;
-    line-height: 20px;
-    color: #303a42;
-    font-family: Assistant, sans-serif;
-  }
-
-  .border-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 50px;
-    margin-top: 16px;
-    margin-bottom: 30px;
-  }
-
-  .hr-border {
-    border-top: 2px solid #b3b4b9;
-    width: 224px;
-    text-align: center;
-  }
-
-  @media screen and (max-width: 990px) {
-    .container {
-      width: 100%;
+    @include tablet {
+      margin-bottom: 48px;
     }
-    .all-faq {
+    .heading-container {
+      h1 {
+        font-family: Assistant;
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 32px;
+        text-align: center;
+        color: #2962ff;
+
+        @include tablet {
+          font-family: Assistant;
+          font-size: 32px;
+          font-weight: 600;
+          line-height: 32px;
+        }
+      }
+
+      h2 {
+        font-family: Assistant;
+        font-size: 32px;
+        font-weight: 400;
+        line-height: 32px;
+        text-align: center;
+        color: #303a42;
+
+        @include tablet {
+          font-family: Assistant;
+          font-size: 24px;
+          font-weight: 400;
+          line-height: 32px;
+        }
+      }
+      .border-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 50px;
+        margin-top: 16px;
+        margin-bottom: 30px;
+        hr {
+          border-top: 2px solid #b3b4b9;
+          width: 224px;
+          text-align: center;
+
+          @include tablet {
+            width: 78px;
+          }
+        }
+      }
+    }
+
+    .faq-container {
       display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-    }
-    .border-container {
-        margin-top: 10px;
-        margin-bottom: 22px;
-    }
-    .hr-border {
-      width: 93px;
-      text-align: center;
-    }
-    .heading {
-      font-size: 32px;
-      font-weight: 600;
-      color: #2962ff;
-      text-align: center;
-    }
-    .heading-two {
-      text-align: center;
-      font-weight: 400;
-      font-size: 24px;
-    }
-    .ques {
-      font-size: 14px;
-      font-weight: 600px;
-      line-height: 20px;
-      color: #303a42;
-      font-family: Assistant, sans-serif;
-    }
-    .ans {
-      font-size: 14px;
-      font-weight: 400px;
-      line-height: 20px;
-      color: #303a42;
-      font-family: Assistant, sans-serif;
+      width: 100%;
+      grid-template-columns: 1fr 1fr;
+      gap: 50px;
+
+      @include tablet {
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+
+      .question-card {
+        background-color: #f2f5fe;
+        padding: 20px 25px;
+        cursor: pointer;
+        border-radius: 17px;
+
+        .ques-container {
+          display: flex;
+          justify-content: space-between;
+          .icon {
+            width: 10.23px;
+            height: 10.23px;
+            border: 1.46px 0px 0px 0px;
+            transform: rotate(0deg);
+            transition: all ease-in-out 0.3s;
+          }
+          .rotate-icon {
+            width: 10.23px;
+            height: 10.23px;
+            border: 1.46px 0px 0px 0px;
+            transform: rotate(45deg);
+            transition: all ease-in-out 0.3s;
+          }
+          h3 {
+            font-family: Assistant;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 27.52px;
+            text-align: left;
+
+            @include tablet {
+              font-family: Assistant;
+              font-size: 14px;
+              font-weight: 600;
+              line-height: 20px;
+            }
+          }
+        }
+      }
     }
   }
 }
