--- a/public/assets/styles/home-page/_companies.scss
+++ b/public/assets/styles/home-page/_companies.scss
@@ -5,8 +5,9 @@
         .list-comapny-log{
 
             display: grid;
-            grid-template-columns: repeat(6,1fr);
-            column-gap: 70px;
+            // grid-template-columns: repeat(6,1fr);
+            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+            column-gap: 67px;
             row-gap: 136px;
             padding: 101px 0;
             @include tablet{
