faq plus folder structure

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -19,6 +19,8 @@
 @import "./components/footer";
 @import "./components/HomePage/discovertheultimate";
 @import "./home-page/companies";
+@import "./components//landing-page/faq";
+
 
 // pages
 @import "./components/footer";
