--- a/public/assets/styles/HomePage/_Hero.scss
+++ b/public/assets/styles/HomePage/_Hero.scss
@@ -14,7 +14,7 @@
   .heading {
     color: #ffffff;
     text-align: center;
-    margin-bottom: 56px;
+    margin: 56px auto;
     p {
       font-size: 20px;
       line-height: 24px;
@@ -100,13 +100,13 @@
           height: 39px;
           border: 1px solid blue;
           outline: none;
-          padding-left: 16px;
+          padding-left: 32px;
         }
         .search {
           position: absolute;
           width: 17.87px;
           height: 17px;
-          left: 16px;
+          left: 12px;
           top: 12px;
           z-index: 20;
         }
@@ -167,12 +167,24 @@
 .Hero {
   @media screen and (max-width: 990px) {
     .cities {
+      width: 297.38px;
+      height: 268px;
       .text {
         text-align: center;
       }
       .grid {
         grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
+        gap: 40px;
+      }
+    }
+    .heading{
+      p{
+        font-size: 18px;
+        line-height: 24px;
+      }
+      h1{
+        font-size: 36px;
+        line-height: 32px;
       }
     }
   }
