[Added] landing page 1 footer

--- a/public/assets/styles/components/_footer.scss
+++ b/public/assets/styles/components/_footer.scss
@@ -118,7 +118,7 @@
             }
           }
   
-          .contacts{
+          .footer-connectwithus{
             display: flex;
             flex-direction: column;
             gap: 1rem;
