--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -27,3 +27,4 @@
 @import "./components/HomePage/discovertheultimate";
 @import "./components/oursolution";
  
+@import "./components/landing-page/landingpagefooter"
