accessible-affortdale-adaptable : complete and icons fix of get-you-virtual-office

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "./home-page/companies";
 @import "./components/landing-page/faq";
 @import "./components/landing-page/get-your-virtual-office";
+@import "./components/landing-page/accessible-affordable-adaptable";
 
 
 // pages
