Neha : Adding Header of landing page

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -19,6 +19,9 @@
 @import "./components/footer";
 @import "./components/HomePage/discovertheultimate";
 @import "./home-page/companies";
+@import "./components/landing-page/Header";
+@import "./components/landing-page/Navigation";
+@import "./components/landing-page/Hero";
 @import "./components//landing-page/faq";
 
 
