component spacing verticaally

--- a/public/assets/styles/components/landing-page/_get-your-virtual-office.scss
+++ b/public/assets/styles/components/landing-page/_get-your-virtual-office.scss
@@ -3,6 +3,7 @@
 
 .get-your-virtual-office{
     .container{
+        margin-top: 162px;
         .heading{
             h2{
                 font-family: Montserrat;
