--- a/public/assets/styles/components/landing-page/_accessible-affordable-adaptable.scss
+++ b/public/assets/styles/components/landing-page/_accessible-affordable-adaptable.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 .accessible-affordable-adaptable{
+
     .container{
+        margin-top: 60px;
         display: flex;
         justify-content: space-between;
         gap: 107px;
