--- a/public/assets/styles/components/landing-page/_faq.scss
+++ b/public/assets/styles/components/landing-page/_faq.scss
@@ -3,6 +3,7 @@
 .landing_page_faq {
   .container {
     margin-bottom: 111px;
+    margin-top: 100px;
 
     @include tablet {
       margin-bottom: 48px;
