[Added] partners, newsletter component added on landing page 1

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -27,4 +27,6 @@
 @import "./components/HomePage/discovertheultimate";
 @import "./components/oursolution";
  
-@import "./components/landing-page/landingpagefooter"
+@import "./components/landing-page/landingpagefooter";
+@import "./components/landing-page/partners";
+@import "./components/landing-page/newsletter-subscription";
