--- a/public/assets/styles/components/landing-page/_Hero.scss
+++ b/public/assets/styles/components/landing-page/_Hero.scss
@@ -23,29 +23,6 @@
         }
     }
 
-    .hero-box{
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
-        margin-top: 110px;
-        margin-bottom: 75px;
-        div{
-            width: 328px;
-            height: 221.53px;
-            border-radius: 20px;
-            border: 0;
-            padding: 35px 40px;
-            background-color: #FFFFFF;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            &:hover{
-                background-color: #23A6F0;
-                color: #FFFFFF;
-            }
-        }
-    }
-
     @media screen and (max-width: 990px){
         .hero-head{
             grid-template-columns: 1fr;
@@ -63,5 +40,34 @@
         .hero-box{
             grid-template-columns: 1fr;
         }
+    }
+}
+
+.hero-box{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    place-items: center;
+    gap: 30px;
+    margin-bottom: 75px;
+    margin-top: -135px;
+    div{
+        width: 328px;
+        height: 221.53px;
+        border-radius: 20px;
+        border: 0;
+        padding: 35px 40px;
+        background-color: #FFFFFF;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+        // &:hover{
+        //     background-color: #23A6F0;
+        //     color: #FFFFFF;
+        // }
+    }
+    @media screen and (max-width: 990px){
+        grid-template-columns: 1fr;
+        margin-top: 75px;
     }
 }
