oursolution:modified and flexible- content

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -34,7 +34,8 @@
 @import "./components/footer";
 @import "./components/HomePage/discovertheultimate";
 @import "./components/oursolution";
+@import "./components/flexible";
  
 @import "./components/landing-page/landingpagefooter";
 @import "./components/landing-page/partners";
-@import "./components/landing-page/newsletter-subscription";
+@import "./components/landing-page/newsletter-subscription"; 
