--- a/public/assets/styles/components/_oursolution.scss
+++ b/public/assets/styles/components/_oursolution.scss
@@ -1,100 +1,102 @@
 body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-   
-  } 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ 
+}  
+
+.icon-subcontainer {
+  padding-top: 22px;
+  width: 290px;
+  height :204px;
+  text-align: center;
+  display: flex;
+  border: 2px solid rgb(197, 183, 183);
+  border-radius: 16px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+ 
   
-  .icon-subcontainer {
-    padding: 20px;
-    width: 350px;
-    height :250px;
-    text-align: center;
-    display: flex;
-    border: 1px solid rgb(197, 183, 183);
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 30px;
-   
-    
-  }
-  .icon-container{
-    padding:5px;
-  }
+}
+.icon-container{
+  padding:5px;
+  gap: 40px;
+}
+
+.title-icon {
+  font-size: 24px;
+  font-family:Inter, sans-serif;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 10px;
+  text-align: left;
+  color: #2962FF;
   
-  .title-icon {
-    font-size: 24px;
-    font-family:Inter, sans-serif;
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: 10px;
-    text-align: left;
-    color: #2962FF;
-    
+
   
-    
+
+}
+
+
+.underline{
+  border:1px solid black;
+  width: 110px;
+  margin-bottom: 10px; 
+  margin-top: -8px; 
   
-  }
+}
+
+.description-icon {
+  font-size: 16px;
+  text-align: left;
+  
+}
+
+.icon {
+  font-size: 30px;
+  color: green;
+ 
+}
+
+.button-icon {
+
+  color: white;
+  // padding: 10px 20px;
+  // margin-top: 20px;
+  cursor: pointer;
+  text-align: left;
+}
+.icon-main{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(20px,auto);
+  
+  overflow: hidden;
+  margin-top: 35px;
+  margin-left: 100px;
+  margin-right: 100px;
+  gap: 40px;
   
   
-  .underline{
-    border:1px solid black;
-    width: 110px;
-    margin-bottom: 10px; 
-    margin-top: -8px; 
-    
-  }
   
-  .description-icon {
-    font-size: 16px;
-    text-align: left;
-    
+ 
+}
+.image {
+  padding-top:30px;
+}
+
+@media screen and (max-width: 720px)  {
+  .icon-main {
+      grid-template-columns: 1fr; 
   }
-  
-  .icon {
-    font-size: 30px;
-    color: green;
-   
+}
+@media screen and (min-width: 720px) and (max-width: 1000px)  {
+  .icon-main {
+      grid-template-columns: repeat(2, 1fr); 
   }
-  
-  .button-icon {
-  
-    color: white;
-    // padding: 10px 20px;
-    // margin-top: 20px;
-    cursor: pointer;
-    text-align: left;
+}
+@media screen and (min-width: 1100px) and (max-width: 1400px)  {
+  .icon-main {
+      grid-template-columns: repeat(3, 1fr); 
   }
-  .icon-main{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(20px,auto);
-    
-    overflow: hidden;
-    padding-left: 40px;
-    margin-top: 20px;
-   
-    
-    
-   
-  }
-  .image {
-    padding-top:30px;
-  }
-  
-  @media screen and (max-width: 720px)  {
-    .icon-main {
-        grid-template-columns: 1fr; 
-    }
-  }
-  @media screen and (min-width: 720px) and (max-width: 1000px)  {
-    .icon-main {
-        grid-template-columns: repeat(2, 1fr); 
-    }
-  }
-  @media screen and (min-width: 1100px) and (max-width: 1400px)  {
-    .icon-main {
-        grid-template-columns: repeat(3, 1fr); 
-    }
-  }
-  
+}
