oursolution:resposive :updated

--- a/public/assets/styles/components/_oursolution.scss
+++ b/public/assets/styles/components/_oursolution.scss
@@ -11,7 +11,7 @@ body{
   height :204px;
   text-align: center;
   display: flex;
-  border: 2px solid rgb(197, 183, 183);
+  border: 2px solid #FFFFFF;
   border-radius: 16px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 30px;
@@ -95,6 +95,7 @@ body{
 @media screen and (min-width: 844px) and (max-width: 1000px)  {
   .icon-main {
       grid-template-columns: repeat(2, 1fr); 
+      
   }
 }
 @media screen and (min-width: 1100px) and (max-width: 1400px)  {
