--- a/public/assets/styles/components/_oursolution.scss
+++ b/public/assets/styles/components/_oursolution.scss
@@ -85,22 +85,41 @@ body{
   padding-top:30px;
 }
 
-@media screen and (max-width: 844px)  {
 
 
-  .icon-subcontainer{
-    width: 351px;
-    margin-left: 20%;
-  }
+
+
+@media screen and (max-width: 517px)  {
+
+
+  // .icon-subcontainer{
+    
+   
+  // }
   .icon-main {
       grid-template-columns: 1fr; 
-      
-      
+      width: 100%;
+      padding: 0;     
+      margin:28%;
       
      
   }
 }
-@media screen and (min-width: 844px) and (max-width: 1000px)  {
+@media screen and (min-width: 517px)and (max-width:800px) {
+
+ 
+   
+  .icon-main {
+    grid-template-columns: 1fr; 
+    width: 460px;
+    padding: 0;     
+    margin-left:31%;
+    margin-right: 31%;
+
+}
+}
+
+@media screen and (min-width: 844px) and (max-width: 1145px)  {
 
   .icon-subcontainer{
     width: 328px;
@@ -112,7 +131,7 @@ body{
       
   }
 }
-@media screen and (min-width: 1100px) and (max-width: 1400px)  {
+@media screen and (min-width: 1145px) and (max-width: 1400px)  {
   .icon-main {
       grid-template-columns: repeat(3, 1fr); 
 
