--- a/public/assets/styles/components/_flexible.scss
+++ b/public/assets/styles/components/_flexible.scss
@@ -118,13 +118,53 @@
   margin-top: 20px;
 }
 /* Styles for screens up to 468px */
-@media screen and (max-width: 786px) {
+.side-heading-two{
+  display: flex;
+  justify-content: center;
+  display: none;
+}
+input{
+  width: 300px;
+}
+.price-heading{
+  display: flex;
+  align-items: center;
+}
+.side-heading-two{
+  display: flex;
+  justify-content: space-between; 
+  display: none;
+}
+.flexing-div{
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 1100px) {
+
+  
   /* CSS rules for screens up to 468px */
-  #top-heading {
+
+  .top-main-container{
+    margin-left: 13%;
+    margin-right: 2%;
+    padding: 0;
+
+  }
+  #top-header {
     display: inline;
+    margin-left: 20px; /* Adjust margin for smaller screens */
+    margin-right: 20px;
+    gap: 20px;
   }
   .side-heading {
-    display: block;
+    display: none;
+  }
+  .side-heading-two{
+    display:inline-block;
+    margin-left:20% ;
+    margin-right: 20%;
+    
+    
   }
   .buttons {
     display: none;
@@ -133,6 +173,7 @@
   .grid-container {
     display: flex;
     align-items: center;
+    margin: 40px;
   }
   .images{
     display: none;
