--- a/public/assets/styles/HomePage/_Hero.scss
+++ b/public/assets/styles/HomePage/_Hero.scss
@@ -1,8 +1,9 @@
 .hero-container {
   background-image: url("../../../../assets/HomePage/hero.svg");
-  background-repeat: no-repeat;
-  object-fit: cover;
-  width: 100vw;
+  background-size: cover;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  width: 100%;
   height: 765px;
   display: flex;
   justify-content: center;
