--- a/public/assets/styles/components/landing-page/_faq.scss
+++ b/public/assets/styles/components/landing-page/_faq.scss
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap");
 
 .landing_page_faq {
-  .container {
-    margin-bottom: 111px;
-    margin-top: 100px;
+  background-color: #FFFFFF;
+  padding: 100px 0;
 
-    @include tablet {
-      margin-bottom: 48px;
-    }
+  @include tablet{
+    padding: 75px 0;
+  }
+  .container {
     .heading-container {
       h1 {
         font-family: Assistant;
@@ -29,7 +29,8 @@
         font-family: Assistant;
         font-size: 32px;
         font-weight: 400;
-        line-height: 32px;
+        line-height: 0px;
+        padding: 14px 0;
         text-align: center;
         color: #303a42;
 
@@ -37,7 +38,8 @@
           font-family: Assistant;
           font-size: 24px;
           font-weight: 400;
-          line-height: 32px;
+          line-height: 0px;
+          padding: 16px 0 16px 0;
         }
       }
       .border-container {
@@ -45,13 +47,14 @@
         flex-direction: row;
         justify-content: center;
         gap: 50px;
-        margin-top: 16px;
-        margin-bottom: 30px;
+        margin-bottom: 25px;
+        @include tablet{
+          margin-bottom: 10px;
+        }
         hr {
           border-top: 2px solid #b3b4b9;
           width: 224px;
           text-align: center;
-
           @include tablet {
             width: 78px;
           }
@@ -63,7 +66,7 @@
       display: grid;
       width: 100%;
       grid-template-columns: 1fr;
-      gap: 50px;
+      gap: 36.23px;
 
       @include tablet {
         grid-template-columns: 1fr;
@@ -72,23 +75,30 @@
 
       .question-card {
         background-color: #f2f5fe;
-        padding: 20px 25px;
+        padding: 11.89px 41.95px 10.89px 17.51px;
         cursor: pointer;
-        border-radius: 17px;
+        border-radius: 12px;
+        
+        @include tablet{
+          padding: 25px 20.89px;
+          border-radius: 17px;
 
+        }
         .ques-container {
           display: flex;
           justify-content: space-between;
+          gap: 42px;
           .icon {
-            width: 10.23px;
-            height: 10.23px;
+            width: 15.23px;
+            height: 15.23px;
             border: 1.46px 0px 0px 0px;
             transform: rotate(0deg);
             transition: all ease-in-out 0.3s;
+            
           }
           .rotate-icon {
-            width: 10.23px;
-            height: 10.23px;
+            width: 15.23px;
+            height: 15.23px;
             border: 1.46px 0px 0px 0px;
             transform: rotate(45deg);
             transition: all ease-in-out 0.3s;
@@ -97,7 +107,6 @@
             font-family: Assistant;
             font-size: 20px;
             font-weight: 600;
-            line-height: 27.52px;
             text-align: left;
 
             @include tablet {
