landing-page-two : trusted companies

--- a/public/assets/styles/components/landing-page-two/_get-your-virtual-office.scss
+++ b/public/assets/styles/components/landing-page-two/_get-your-virtual-office.scss
@@ -2,6 +2,7 @@
 
 .page-two-get-your-virtual-office {
   .container {
+    margin-top: 100px;
     max-width: 1145.07px;
     .heading {
       margin-bottom: 60px;
