--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -40,4 +40,5 @@
 
 
 // landing page two
-@import "./components/landing-page-two/get-your-virtual-office"
+@import "./components/landing-page-two/get-your-virtual-office";
+@import "./components/landing-page-two/trusted-companies";
