ld-pg-2 : accessible-afforadale-adaptale

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -42,3 +42,4 @@
 // landing page two
 @import "./components/landing-page-two/get-your-virtual-office";
 @import "./components/landing-page-two/trusted-companies";
+@import "./components/landing-page-two/page-two-accessible-affordable-adaptable";
