--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -43,3 +43,4 @@
 @import "./components/landing-page-two/get-your-virtual-office";
 @import "./components/landing-page-two/trusted-companies";
 @import "./components/landing-page-two/page-two-accessible-affordable-adaptable";
+@import "./components/landing-page-two/slider-container";
