--- a/public/assets/styles/components/landing-page/_faq.scss
+++ b/public/assets/styles/components/landing-page/_faq.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap");
 
 .landing_page_faq {
-  background-color: #FFFFFF;
+  background-color: #FAFAFA;
   padding: 100px 0;
 
   @include tablet{
