--- a/public/assets/styles/components/HomePage/_discovertheultimate.scss
+++ b/public/assets/styles/components/HomePage/_discovertheultimate.scss
@@ -96,27 +96,32 @@
                 }
             }
 
-            .data-points{
-                display: grid;
-                grid-template-columns: 1fr 1fr;                
+            .data-points-container{
+                display: flex;
+                align-items: baseline;
                 gap: 2.5rem;
-
-                li{
-                    font-size: 24px;
-                    font-weight: 700;
-                    line-height: 32px;
-                    text-align: left;
-                    color: #393939;
-                }
-                p{
-                    font-size: 16px;
-                    font-weight: 400;
-                    line-height: 26px;
-                    text-align: left;
-                    color: #777777;
-
+                .data-points{
+                    display: grid;
+                    gap: 2.5rem;
+    
+                    li{
+                        font-size: 24px;
+                        font-weight: 700;
+                        line-height: 32px;
+                        text-align: left;
+                        color: #393939;
+                    }
+                    p{
+                        font-size: 16px;
+                        font-weight: 400;
+                        line-height: 26px;
+                        text-align: left;
+                        color: #777777;
+    
+                    }
                 }
             }
+
 
             .call-to-action{
                 font-size: 18px;
@@ -124,6 +129,7 @@
                 line-height: 32px;
                 text-align: left;
                 color: #2962FF;
+                padding-left: 2rem;
             }
 
             @include tablet{
@@ -141,9 +147,8 @@
                         font-size: 16px;
                     }
                 }
-                .data-points{
-                    row-gap: 1.25rem;
-                    column-gap: 3rem;                    
+                .data-points-container{
+                    
                 }
             }
 
@@ -162,9 +167,13 @@
                         font-size: 14px;
                     }
                 }
-                .data-points{
-                    grid-template-columns: 1fr;
+                .data-points-container{
+                    flex-direction: column;
                     gap: 1.25rem;
+                }
+
+                .call-to-action{
+                    padding-left: 0;
                 }
             }
         }
