--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -44,3 +44,4 @@
 @import "./components/landing-page-two/trusted-companies";
 @import "./components/landing-page-two/page-two-accessible-affordable-adaptable";
 @import "./components/landing-page-two/faq";
+@import "./components/landing-page-two//landingpage2footer";
