fix our solution

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -21,7 +21,7 @@
 @import "./home-page/companies";
 @import "./components/footer";
 @import "./components/HomePage/discovertheultimate";
-@import "./components/oursolution";
+@import "./home-page/oursolution";
 @import "./components/flexible";
  
 
