--- a/public/assets/styles/components/landing-page/_Hero.scss
+++ b/public/assets/styles/components/landing-page/_Hero.scss
@@ -1,4 +1,4 @@
-.container-hero{
+.container-hero{ 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,6 +31,7 @@
             h1{
                 font-size: 30px;
                 line-height: 36.57px;
+                text-align: center;
             }
             .form{
                 width: 297px;
@@ -43,33 +44,53 @@
     }
 }
 
-.hero-box{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    place-items: center;
-    width: 1046px;
-    gap: 30px;
-    margin-bottom: 75px;
-    margin-top: -135px;
-    div{
-        width: 328px;
-        height: 221.53px;
-        border-radius: 20px;
-        border: 0;
-        padding: 35px 40px;
-        background-color: #FFFFFF;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
-        // &:hover{
-        //     background-color: #23A6F0;
-        //     color: #FFFFFF;
-        // }
-    }
-    @media screen and (max-width: 990px){
-        grid-template-columns: 1fr;
-        margin-top: 75px;
-        width: 329px;
+.hero-bottom-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .hero-box{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        place-items: center;
+        width: 1046px;
+        gap: 30px;
+        margin-top: -135px;
+        div{
+            width: 328px;
+            height: 221.53px;
+            border-radius: 20px;
+            border: 0;
+            padding: 35px 40px;
+            background-color: #FFFFFF;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+            // &:hover{
+            //     background-color: #23A6F0;
+            //     color: #FFFFFF;
+            // }
+        }
+        @media screen and (max-width: 1024px) {
+            gap: 0px;
+            div{
+                width: 283px;
+                height: 261.53px;
+            }
+        }
+        @media screen and (max-width: 990px){
+            grid-template-columns: 1fr;
+            margin-top: 75px;
+            width: 100%;
+            gap: 30px;
+            div{
+                width: 70%;
+            }
+        }
+        @media screen and (max-width: 390px) {
+            div{
+                height: 270.53px;
+            }
+        }
     }
 }
