--- a/public/assets/styles/components/_footer.scss
+++ b/public/assets/styles/components/_footer.scss
@@ -4,7 +4,7 @@
     .footer-top{
       background: #191C20;
       .container{
-        width: 80%;
+        width: 90%;
         max-width: 1440px;
         margin: 0 auto;
         padding: 3rem 0;
@@ -17,14 +17,14 @@
         .links{
           display: flex;
           flex-direction: column;
-          flex-wrap: wrap;
           gap: 20px;
+          width: max-content;
   
           .social-links{
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 20px;
+            gap: 30px;
             a{
               color: white;
               font-size: 20px;
@@ -35,8 +35,7 @@
   
         .footer-links-container{
           display: flex;
-          flex-wrap: wrap;
-          gap: 2.625rem 3.5rem;
+          gap: 2.625rem 5rem;
   
           .footer-links{
             display: flex;
@@ -151,6 +150,20 @@
           }
         }
       }
+
+      @include mobile{
+        .container{
+          flex-direction: column;
+
+          .footer-links-container{
+            flex-direction: column;
+          }
+        }
+
+        
+
+
+      }
   
     }
   
@@ -158,7 +171,7 @@
       background: #2B2F33;
       
       .container{
-        width: 80%;
+        width: 90%;
         max-width: 1500px;
         margin: 0 auto;
         padding: 3rem 0;
